added new uI and new projects

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -34,7 +34,7 @@ header {
    min-height: 500px;
    width: 100%;
    /*background: #161415 url(../images/header-background.jpg) no-repeat top center;*/
-   background: #161415 url(../images/beach_sunset2.jpg) no-repeat top center;
+   /*background: #161415 url(../images/beach_sunset2.jpg) no-repeat top center;*/
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
@@ -79,8 +79,9 @@ header .banner-text h3 a {
 header .banner-text hr {
    width: 60%;
    margin: 18px auto 24px auto;
-   border-color: #2F2D2E;
-   border-color: rgba(150, 150, 150, .1);
+   /*border-color: #2F2D2E;
+   border-color: rgba(150, 150, 150, .1);*/
+   border-color: white;
 }
 
 /* header social links */
@@ -180,7 +181,7 @@ ul#nav li a {
 }
 
 ul#nav li a:active { background-color: transparent !important; }
-ul#nav li.current a { color: #F06000; }
+ul#nav li.current a { color: #11ABB0; }
 
 
 /* ------------------------------------------------------------------ */
@@ -188,7 +189,7 @@ ul#nav li.current a { color: #F06000; }
 /* ------------------------------------------------------------------ */
 
 #about {
-   background: #2B2B2B;
+   background: #ebeeee;
    padding-top: 96px;
    padding-bottom: 66px;
    overflow: hidden;
@@ -199,7 +200,7 @@ ul#nav li.current a { color: #F06000; }
 
 #about h2 {
    font: 22px/30px 'opensans-bold', sans-serif;
-   color: #fff;
+   color: #111111;
    margin-bottom: 12px;
 }
 #about p {
@@ -208,8 +209,9 @@ ul#nav li.current a { color: #F06000; }
 }
 #about .profile-pic {
    position: relative;
-   width: 180px;
-   height: 184px;
+   width: 150px;
+   height: 154px;
+   margin-left:-17px;
    border-radius: 100%;
 }
 #about .contact-details { width: 41.66667%; }
@@ -972,7 +974,7 @@ footer .social-links li {
     margin: 0;
     padding: 0;
     margin-left: 42px;
-    color: #F06000;
+    color: #11ABB0;
 }
 
 footer .social-links li:first-child { margin-left: 0; }
