removed unnecessary line

--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -12,7 +12,7 @@
     margin: 20px;
     padding: 25px;
     width: 200px;
-    border-radius: 20px;
+    /* border-radius: 20px; */
     transition: all 0.3s ease;
     /* box-shadow: 2px 4px 7px 1px grey; */
     text-align: center;
